добивала адаптив на ad-business и place-settings

--- a/src/app/components/ad-business/ad-business.component.css
+++ b/src/app/components/ad-business/ad-business.component.css
@@ -1,3 +1,4 @@
+@media screen and (max-width: 5000px){
 .return-to-main {
   display: flex;
   width: 180px;
@@ -209,4 +210,437 @@ label {
 .goodAccessText {
   color: green;
   margin-top: 30px;
+}
+}
+
+@media screen and (max-width: 1450px){
+
+  .return-to-main {
+    display: flex;
+    width: calc(0.75*180px);
+    margin-left: calc(0.75*168px);
+    margin-bottom: calc(0.83*65px);
+    align-items: center;
+  }
+  
+  .return-button {
+    margin-right: calc(0.75*18px);
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  
+  .return-to-main span {
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*20px);
+    color: rgba(27, 31, 59, 0.65);
+  }
+  
+  .wrapper {
+    min-height: calc(100vh - 150px);
+    /* 150px - отступ сверху футера */
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .main-top-content {
+    display: flex;
+    margin-left: calc(0.75*202px);
+    margin-bottom: calc(0.83*100px);
+  }
+  
+  .profile-navigation {
+    width: calc(0.75*238px);
+    margin-right: calc(0.75*60px);
+    margin-top: calc(0.83*31px);
+  }
+  
+  .profile-navigation li {
+    font-size: calc(0.75*20px);
+    line-height: 177.69%;
+    margin-bottom: calc(0.83*16px);
+  }
+  
+  .profile-navigation li:last-child {
+    margin-bottom: 0;
+  }
+  
+  .title {
+    font-weight: 700;
+    font-size: calc(0.75*28px);
+    line-height: calc(0.83*38px);
+    margin-bottom: calc(0.83*32px);
+  }
+  
+  .description {
+    display: inline-block;
+    font-weight: 400;
+    font-size: calc(0.75*24px);
+    line-height: calc(0.83*43px);
+    max-width: calc(0.75*1070px);
+    margin-bottom: calc(0.83*30px);
+  }
+  
+  .subtitle {
+    font-weight: 600;
+    font-size: calc(0.75*26px);
+    line-height: calc(0.83*35px);
+    color: #000000;
+    margin-bottom: calc(0.83*39px);
+  }
+  
+  .subtitle2 {
+    margin-top: calc(0.83*30px);
+    margin-bottom: calc(0.83*24px);
+    font-weight: 600;
+    font-size: calc(0.75*20px);
+    line-height: calc(0.83*36px);
+    color: #000000;
+  }
+  
+  input {
+    cursor: pointer;
+  }
+  
+  .input-field {
+    width: calc(0.75*560px);
+    height: calc(0.83*62px);
+    border-radius: 20px;
+    background: #E0E0D6;
+    margin-bottom: calc(0.83*20px);
+  }
+  
+  .input-field input {
+    width: calc(0.75*520px);
+    height: calc(0.83*52px);
+    font-weight: 400;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
+    padding-left: calc(0.75*28px);
+    margin-top: calc(0.83*4px);
+    margin-left: calc(0.75*5px);
+    background: inherit;
+    border-radius: 10px;
+  }
+  
+  .red-text {
+    font-size: calc(0.75*12px);
+    display: inline-block;
+    color: red;
+    padding-top: calc(0.83*10px);
+  }
+  
+  .custom-radio {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+  }
+  
+  .custom-radio+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    font-size: calc(0.75*24px);
+    line-height: 177.69%;
+  }
+  
+  .custom-radio+label::before {
+    content: '';
+    display: inline-block;
+    width: calc(0.75*22.6px);
+    height: calc(0.83*24px);
+    margin-right: calc(0.75*19px);
+    margin-left: calc(0.75*15px);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100% 100%;
+  }
+  
+  .custom-radio_multiple:checked+label::before {
+    background-image: url("..//..//..//assets/img/filter-multiple-checked.svg");
+  }
+  
+  .custom-radio_multiple:disabled+label::before {
+    background-image: url("..//..//..//assets/img/filter-multiple-default.svg");
+  }
+  
+  .custom-radio_multiple+label::before {
+    background-image: url("..//..//..//assets/img/filter-multiple-default.svg");
+  }
+  
+  .custom-radio_single:checked+label::before {
+    background-image: url("..//..//..//assets/img/filter-single-checked.svg");
+  }
+  
+  .custom-radio_single:disabled+label::before {
+    background-image: url("..//..//..//assets/img/filter-single-default.svg");
+  }
+  
+  .custom-radio_single+label::before {
+    background-image: url("..//..//..//assets/img/filter-single-default.svg");
+  }
+  
+  .card {
+    padding-top: calc(0.83*19px);
+    padding-left: calc(0.75*29px);
+    width: calc(0.75*309.51px);
+    height: calc(0.83*203px);
+    background: #D1E5D2;
+    border-radius: 20px;
+  }
+  
+  label {
+    font-weight: 600;
+    font-size: calc(0.75*20px);
+    line-height: calc(0.83*36px);
+    color: #000000;
+  }
+  
+  .card__description {
+    font-weight: 300;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*27px);
+    color: #000000;
+    max-width: calc(0.75*276px);
+    margin-top: calc(0.83*21px);
+  
+  }
+  
+  .price {
+    font-weight: 600;
+    font-size: calc(0.75*20px);
+    line-height: calc(0.83*36px);
+    color: #000000;
+    margin-left: 30%;
+  }
+  
+  .button-send {
+    width: calc(0.75*220px);
+    height: calc(0.83*54px);
+    margin-top: calc(0.83*48px);
+    background-color: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    border-radius: 10px;
+    color: rgba(27, 31, 59, 0.4);
+  }
+  
+  .goodAccessText {
+    color: green;
+    margin-top: calc(0.83*30px);
+  }
+}
+
+@media screen and (max-width: 1370px){
+
+  .return-to-main {
+    display: flex;
+    width: calc(0.71*180px);
+    margin-left: calc(0.71*168px);
+    margin-bottom: calc(0.71*65px);
+    align-items: center;
+  }
+  
+  .return-button {
+    margin-right: calc(0.71*18px);
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  
+  .return-to-main span {
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*20px);
+    color: rgba(27, 31, 59, 0.65);
+  }
+  
+  .wrapper {
+    min-height: calc(100vh - 150px);
+    /* 150px - отступ сверху футера */
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .main-top-content {
+    display: flex;
+    margin-left: calc(0.71*202px);
+    margin-bottom: calc(0.71*100px);
+  }
+  
+  .profile-navigation {
+    width: calc(0.71*238px);
+    margin-right: calc(0.71*60px);
+    margin-top: calc(0.71*31px);
+  }
+  
+  .profile-navigation li {
+    font-size: calc(0.71*20px);
+    line-height: 177.69%;
+    margin-bottom: calc(0.71*16px);
+  }
+  
+  .profile-navigation li:last-child {
+    margin-bottom: 0;
+  }
+  
+  .title {
+    font-weight: 700;
+    font-size: calc(0.71*28px);
+    line-height: calc(0.71*38px);
+    margin-bottom: calc(0.71*32px);
+  }
+  
+  .description {
+    display: inline-block;
+    font-weight: 400;
+    font-size: calc(0.71*24px);
+    line-height: calc(0.71*43px);
+    max-width: calc(0.71*1070px);
+    margin-bottom: calc(0.71*30px);
+  }
+  
+  .subtitle {
+    font-weight: 600;
+    font-size: calc(0.71*26px);
+    line-height: calc(0.71*35px);
+    color: #000000;
+    margin-bottom: calc(0.71*39px);
+  }
+  
+  .subtitle2 {
+    margin-top: calc(0.71*30px);
+    margin-bottom: calc(0.71*24px);
+    font-weight: 600;
+    font-size: calc(0.71*20px);
+    line-height: calc(0.71*36px);
+    color: #000000;
+  }
+  
+  input {
+    cursor: pointer;
+  }
+  
+  .input-field {
+    width: calc(0.71*560px);
+    height: calc(0.71*62px);
+    border-radius: 20px;
+    background: #E0E0D6;
+    margin-bottom: calc(0.71*20px);
+  }
+  
+  .input-field input {
+    width: calc(0.71*520px);
+    height: calc(0.71*52px);
+    font-weight: 400;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
+    padding-left: calc(0.71*28px);
+    margin-top: calc(0.71*4px);
+    margin-left: calc(0.71*5px);
+    background: inherit;
+    border-radius: 10px;
+  }
+  
+  .red-text {
+    font-size: calc(0.71*12px);
+    display: inline-block;
+    color: red;
+    padding-top: calc(0.71*10px);
+  }
+  
+  .custom-radio {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+  }
+  
+  .custom-radio+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    font-size: calc(0.71*24px);
+    line-height: 177.69%;
+  }
+  
+  .custom-radio+label::before {
+    content: '';
+    display: inline-block;
+    width: calc(0.71*22.6px);
+    height: calc(0.71*24px);
+    margin-right: calc(0.71*19px);
+    margin-left: calc(0.71*15px);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100% 100%;
+  }
+  
+  .custom-radio_multiple:checked+label::before {
+    background-image: url("..//..//..//assets/img/filter-multiple-checked.svg");
+  }
+  
+  .custom-radio_multiple:disabled+label::before {
+    background-image: url("..//..//..//assets/img/filter-multiple-default.svg");
+  }
+  
+  .custom-radio_multiple+label::before {
+    background-image: url("..//..//..//assets/img/filter-multiple-default.svg");
+  }
+  
+  .custom-radio_single:checked+label::before {
+    background-image: url("..//..//..//assets/img/filter-single-checked.svg");
+  }
+  
+  .custom-radio_single:disabled+label::before {
+    background-image: url("..//..//..//assets/img/filter-single-default.svg");
+  }
+  
+  .custom-radio_single+label::before {
+    background-image: url("..//..//..//assets/img/filter-single-default.svg");
+  }
+  
+  .card {
+    padding-top: calc(0.71*19px);
+    padding-left: calc(0.71*29px);
+    width: calc(0.71*309.51px);
+    height: calc(0.71*203px);
+    background: #D1E5D2;
+    border-radius: 20px;
+  }
+  
+  label {
+    font-weight: 600;
+    font-size: calc(0.71*20px);
+    line-height: calc(0.71*36px);
+    color: #000000;
+  }
+  
+  .card__description {
+    font-weight: 300;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*27px);
+    color: #000000;
+    max-width: calc(0.71*276px);
+    margin-top: calc(0.71*21px);
+  
+  }
+  
+  .price {
+    font-weight: 600;
+    font-size: calc(0.71*20px);
+    line-height: calc(0.71*36px);
+    color: #000000;
+    margin-left: 30%;
+  }
+  
+  .button-send {
+    width: calc(0.71*220px);
+    height: calc(0.71*54px);
+    margin-top: calc(0.71*48px);
+    background-color: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    border-radius: 10px;
+    color: rgba(27, 31, 59, 0.4);
+  }
+  
+  .goodAccessText {
+    color: green;
+    margin-top: calc(0.71*30px);
+  }
 }
