--- a/src/app/components/favourites-page/favourites-page.component.html
+++ b/src/app/components/favourites-page/favourites-page.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <app-header></app-header>
-<div>
+<div class="wrapper">
 <div class="return-to-main">
   <a routerLink="/">
     <img src="assets/img/return-button.svg" alt="return-button" class="return-button" width="16" height="16">
@@ -30,5 +30,5 @@
 
   </div>
 </div>
-<app-footer></app-footer>
+<app-footer class="footer"></app-footer>
 </div>
