--- a/src/app/components/login-page/login-page.component.css
+++ b/src/app/components/login-page/login-page.component.css
@@ -159,25 +159,25 @@
 @media screen and (max-width: 1450px) {
   .header-container {
     width: calc(0.75*1578.49px);
-    height: calc(0.71*94.5px);
-    margin-top: calc(0.71*27px);
+    height: calc(0.83*94.5px);
+    margin-top: calc(0.83*27px);
     margin-left: calc(0.75*172px);
-    margin-bottom: calc(0.71*140px);
+    margin-bottom: calc(0.83*140px);
     border-bottom: 2px solid #e9e9e9;
   }
 
   .header-container a {
     font-weight: 300;
     font-size: calc(0.75*48px);
-    line-height: 56px;
+    line-height: calc(0.83*56px);
   }
 
   .logo-img1 {
     position: absolute;
     width: calc(0.75*50px);
-    height: calc(0.71*49.74px);
+    height: calc(0.83*49.74px);
     left: calc(0.75*165px);
-    top: calc(0.71*30px);
+    top: calc(0.83*30px);
 
     background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
     filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
