--- a/src/app/components/main-webpage/coworking-item/coworking-item.component.css
+++ b/src/app/components/main-webpage/coworking-item/coworking-item.component.css
@@ -284,8 +284,8 @@
     margin-left: calc(0.75*164px);
     margin-top: calc(0.83*18px);
     margin-bottom: calc(0.83*68px);
-    font-size: 15px;
-    line-height: 20px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*20px);
     color: rgba(27, 31, 59, 0.65);
   }
 
@@ -310,8 +310,8 @@
 
   .title {
     font-weight: 700;
-    font-size: 28px;
-    line-height: 38px;
+    font-size: calc(0.75*28px);
+    line-height: calc(0.83*38px);
     color: #000000;
     margin-right: calc(0.75*5px);
   }
@@ -322,7 +322,7 @@
 
   .coworking-rating {
     font-weight: 400;
-    font-size: 24px;
+    font-size: calc(0.75*24px);
     line-height: 177.69%;
     margin-right: calc(0.75*11px);
   }
@@ -370,15 +370,15 @@
 
   .coworking-description {
     font-weight: 300;
-    font-size: 22px;
+    font-size: calc(0.75*22px);
     line-height: 177.69%;
     margin-bottom: calc(0.83*5px);
   }
 
   .coworking-map p {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.75*24px);
+    line-height: calc(0.83*33px);
     margin-bottom: calc(0.83*38px);
   }
 
@@ -401,7 +401,7 @@
     gap: 25px;
     align-items: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: calc(0.75*20px);
     line-height: 177.69%;
     margin-bottom: calc(0.83*15px);
   }
@@ -411,7 +411,7 @@
     gap: 24px;
     align-items: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: calc(0.75*20px);
     line-height: 177.69%;
     margin-bottom: calc(0.83*70px);
   }
@@ -422,8 +422,8 @@
 
   .tags p {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.75*24px);
+    line-height: calc(0.83*33px);
     margin-bottom: calc(0.83*27px);
   }
 
@@ -437,7 +437,7 @@
     text-align: center;
     min-width: calc(0.75*80px);
     max-width: calc(0.75*300px);
-    font-size: 20px;
+    font-size: calc(0.75*20px);
     line-height: 177.69%;
     background: #E0E0D6;
     border-radius: 20px;
@@ -445,8 +445,8 @@
 
   .contacts p {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.75*24px);
+    line-height: calc(0.83*33px);
     margin-bottom: calc(0.83*37px);
   }
 
@@ -457,7 +457,7 @@
   }
 
   .phone-information span {
-    font-size: 20px;
+    font-size: calc(0.75*20px);
     line-height: 177.69%;
   }
 
@@ -468,8 +468,8 @@
 
   .reviews-title {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.75*24px);
+    line-height: calc(0.83*33px);
     margin-bottom: calc(0.83*26px);
   }
 
@@ -489,7 +489,7 @@
     width: 100%;
     height: 100%;
     font-weight: 300;
-    font-size: 22px;
+    font-size: calc(0.75*22px);
     line-height: 177.69%;
     background: inherit;
     border-radius: 10px;
@@ -523,14 +523,14 @@
 
   .review-name {
     font-weight: 600;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: calc(0.75*22px);
+    line-height: calc(0.83*30px);
     margin-right: calc(0.75*8px);
   }
 
   .review-time {
     padding-top: calc(0.83*5px);
-    font-size: 15px;
+    font-size: calc(0.75*15px);
     line-height: 177.69%;
     color: #535353;
   }
@@ -556,8 +556,8 @@
     margin-left: calc(0.71*164px);
     margin-top: calc(0.71*18px);
     margin-bottom: calc(0.71*68px);
-    font-size: 15px;
-    line-height: 20px;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*20px);
     color: rgba(27, 31, 59, 0.65);
   }
 
@@ -582,8 +582,8 @@
 
   .title {
     font-weight: 700;
-    font-size: 28px;
-    line-height: 38px;
+    font-size: calc(0.71*28px);
+    line-height: calc(0.71*38px);
     color: #000000;
     margin-right: calc(0.71*5px);
   }
@@ -594,7 +594,7 @@
 
   .coworking-rating {
     font-weight: 400;
-    font-size: 24px;
+    font-size: calc(0.71*24px);
     line-height: 177.69%;
     margin-right: calc(0.71*11px);
   }
@@ -642,15 +642,15 @@
 
   .coworking-description {
     font-weight: 300;
-    font-size: 22px;
+    font-size: calc(0.71*22px);
     line-height: 177.69%;
     margin-bottom: calc(0.71*5px);
   }
 
   .coworking-map p {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.71*24px);
+    line-height: calc(0.71*33px);
     margin-bottom: calc(0.71*38px);
   }
 
@@ -673,7 +673,7 @@
     gap: 25px;
     align-items: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: calc(0.71*20px);
     line-height: 177.69%;
     margin-bottom: calc(0.71*15px);
   }
@@ -683,7 +683,7 @@
     gap: 24px;
     align-items: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: calc(0.71*20px);
     line-height: 177.69%;
     margin-bottom: calc(0.71*70px);
   }
@@ -694,8 +694,8 @@
 
   .tags p {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.71*24px);
+    line-height: calc(0.71*33px);
     margin-bottom: calc(0.71*27px);
   }
 
@@ -709,7 +709,7 @@
     text-align: center;
     min-width: calc(0.71*80px);
     max-width: calc(0.71*300px);
-    font-size: 20px;
+    font-size: calc(0.71*20px);
     line-height: 177.69%;
     background: #E0E0D6;
     border-radius: 20px;
@@ -717,8 +717,8 @@
 
   .contacts p {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.71*24px);
+    line-height: calc(0.71*33px);
     margin-bottom: calc(0.71*37px);
   }
 
@@ -729,7 +729,7 @@
   }
 
   .phone-information span {
-    font-size: 20px;
+    font-size: calc(0.71*20px);
     line-height: 177.69%;
   }
 
@@ -740,8 +740,8 @@
 
   .reviews-title {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: calc(0.71*24px);
+    line-height: calc(0.71*33px);
     margin-bottom: calc(0.71*26px);
   }
 
@@ -761,7 +761,7 @@
     width: 100%;
     height: 100%;
     font-weight: 300;
-    font-size: 22px;
+    font-size: calc(0.71*22px);
     line-height: 177.69%;
     background: inherit;
     border-radius: 10px;
@@ -795,14 +795,14 @@
 
   .review-name {
     font-weight: 600;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: calc(0.71*22px);
+    line-height: calc(0.71*30px);
     margin-right: calc(0.71*8px);
   }
 
   .review-time {
     padding-top: calc(0.71*5px);
-    font-size: 15px;
+    font-size: calc(0.71*15px);
     line-height: 177.69%;
     color: #535353;
   }
