--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.css
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.css
@@ -329,8 +329,8 @@
 @media screen and (max-width: 1450px) {
   .return-to-main {
     display: flex;
-    width: calc(0.75*180px);
-    margin-left: calc(0.75*68px);
+    width: calc(0.75*220px);
+    margin-left: calc(0.75*180px);
     margin-bottom: calc(0.83*65px);
     align-items: center;
   }
@@ -343,7 +343,7 @@
 
   .return-to-main span {
     font-size: calc(0.75*15px);
-    line-height: 20px;
+    line-height: calc(0.83*20px);
     color: rgba(27, 31, 59, 0.65);
   }
 
@@ -405,7 +405,7 @@
   .progress-information {
     margin-left: calc(0.75*560px);
     margin-bottom: calc(0.83*40px);
-    padding: 50px 85px 80px 102px;
+    padding: calc(0.83*50px) calc(0.75*85px) calc(0.83*80px) calc(0.75*102px);
     width: calc(0.75*1075.53px);
     left: calc(0.75*568.47px);
     top: calc(0.83*824px);
@@ -417,7 +417,7 @@
     display: flex;
     font-size: calc(0.75*40px);
     font-weight: 700;
-    line-height: 54px;
+    line-height: calc(0.83*54px);
     letter-spacing: 0em;
     text-align: center;
     margin-left: calc(0.75*230px);
@@ -453,7 +453,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: calc(0.75*28px);
-    line-height: 38px;
+    line-height: calc(0.83*38px);
     color: #000000;
     margin-bottom: calc(0.83*54px);
   }
@@ -467,7 +467,7 @@
     height: calc(0.83*57px);
     font-weight: 300;
     font-size: calc(0.75*15px);
-    line-height: 28px;
+    line-height: calc(0.83*28px);
     padding-left: calc(0.75*28px);
     background: #E0E0D6;
     border-radius: 10px;
@@ -521,7 +521,7 @@
     cursor: pointer;
     display: flex;
     width: calc(0.75*251px);
-    padding: 13px 9px;
+    padding: calc(0.83*13px) calc(0.75*9px);
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
@@ -621,7 +621,7 @@
     left: calc(0.75*5px);
     width: calc(0.75*30px);
     height: calc(0.83*30px);
-    line-height: 30px;
+    line-height: calc(0.83*30px);
     background: #9C5D56;
     color: #fff;
     font-size: calc(0.75*60%);
@@ -651,8 +651,8 @@
 @media screen and (max-width: 1370px) {
   .return-to-main {
     display: flex;
-    width: calc(0.71*180px);
-    margin-left: calc(0.71*68px);
+    width: calc(0.71*220px);
+    margin-left: calc(0.71*180px);
     margin-bottom: calc(0.71*65px);
     align-items: center;
   }
@@ -665,7 +665,7 @@
 
   .return-to-main span {
     font-size: calc(0.71*15px);
-    line-height: 20px;
+    line-height: calc(0.71*20px);
     color: rgba(27, 31, 59, 0.65);
   }
 
@@ -727,7 +727,7 @@
   .progress-information {
     margin-left: calc(0.71*560px);
     margin-bottom: calc(0.71*40px);
-    padding: 50px 85px 80px 102px;
+    padding: calc(0.71*50px) calc(0.71*85px) calc(0.71*80px) calc(0.71*102px);
     width: calc(0.71*1075.53px);
     left: calc(0.71*568.47px);
     top: calc(0.71*824px);
@@ -739,7 +739,7 @@
     display: flex;
     font-size: calc(0.71*40px);
     font-weight: 700;
-    line-height: 54px;
+    line-height: calc(0.71*54px);
     letter-spacing: 0em;
     text-align: center;
     margin-left: calc(0.71*230px);
@@ -775,7 +775,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: calc(0.71*28px);
-    line-height: 38px;
+    line-height: calc(0.71*38px);
     color: #000000;
     margin-bottom: calc(0.71*54px);
   }
@@ -789,7 +789,7 @@
     height: calc(0.71*57px);
     font-weight: 300;
     font-size: calc(0.71*15px);
-    line-height: 28px;
+    line-height: calc(0.71*28px);
     padding-left: calc(0.71*28px);
     background: #E0E0D6;
     border-radius: 10px;
@@ -843,7 +843,7 @@
     cursor: pointer;
     display: flex;
     width: calc(0.71*251px);
-    padding: 13px 9px;
+    padding: calc(0.71*13px) calc(0.71*9px);
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
@@ -943,7 +943,7 @@
     left: calc(0.71*5px);
     width: calc(0.71*30px);
     height: calc(0.71*30px);
-    line-height: 30px;
+    line-height: calc(0.71*30px);
     background: #9C5D56;
     color: #fff;
     font-size: calc(0.71*60%);
