--- a/src/app/components/place-settings/place-settings.component.html
+++ b/src/app/components/place-settings/place-settings.component.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a routerLink="/favourites">Избранное</a></li>
       <li><a routerLink="/profile">Настройки профиля</a></li>
-      <li><a routerLink="/place-settings">Настройки мест</a></li>
+      <li style="border-right: solid 2px black ;"><a routerLink="/place-settings">Настройки мест</a></li>
       <li *ngIf="user.role_id == 2"><a routerLink="/ad-business">Продвижение</a></li>
     </ul>
   </div>
