--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -13,7 +13,7 @@
     <div class="profile-navigation">
       <ul>
         <li><a routerLink="/favourites">Избранное</a></li>
-        <li><a routerLink="/profile">Настройки профиля</a></li>
+        <li style="border-right: solid 2px black ;"><a routerLink="/profile">Настройки профиля</a></li>
         <li><a routerLink="/place-settings">Настройки мест</a></li>
         <li *ngIf="user.role_id == 2"><a routerLink="/ad-business">Продвижение</a></li>
       </ul>
